crates/alder-parse/src/expression/snapshots/alder_parse__expression__string__tests__empty.snap
---
source: crates/alder-parse/src/expression/string.rs
description: "Code:\n\n\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Str(
        "",
    ),
}
