crates/alder-parse/src/expression/snapshots/alder_parse__expression__string__tests__error_endless.snap
---
source: crates/alder-parse/src/expression/string.rs
description: "Code:\n\n\"hello"
---
String(
    EndlessSingle,
    1,
    2,
)
