crates/alder-parse/src/expression/snapshots/alder_parse__expression__string__tests__unicode.snap
---
source: crates/alder-parse/src/expression/string.rs
description: "Code:\n\n\"\\u{1F600}\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Str(
        "😀",
    ),
}
